cumulated sweep-up of small improvements from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54588 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -529,6 +529,8 @@ make install
 @end example
 
 @noindent
+A parallel make can be used (but run @command{make all} first).
+
 This will install to the following directories:
 
 @table @asis
@@ -3435,9 +3437,6 @@ variable @code{MAKE} at configure time, for example
 @example
 ./configure MAKE=gmake
 @end example
-
-@c Note the comment in @ref{Installation} about using a parallel
-@c @command{make}.
 
 @node Using FORTRAN, Compile and load flags, Using make, Configuration on a Unix-alike
 @section Using FORTRAN
