--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1650,8 +1650,8 @@ possible.
 
 @item
 The code in package vignettes (@pxref{Writing package vignettes}) is
-executed, and the vignettes made from the sources as a check of
-completeness.
+executed, and the vignettes re-made from the sources as a check of
+completeness (unless there is an @file{inst/doc/Makefile} file).
 
 @item
 The PDF version of the package's manual is created (to check that the
@@ -1815,14 +1815,15 @@ By default @code{R CMD build} will run @code{Sweave} on all files in
 Sweave format.  If no @file{Makefile} is found in directory
 @file{inst/doc}, then @code{tools::texi2dvi(pdf = TRUE)} is run on all
 vignettes.  Whenever a @file{Makefile} is found, then @code{R CMD build}
-will try to run @command{make} after the @code{Sweave} step, so PDF
+will try to run @command{make} after the @code{Sweave} runs, so PDF
 manuals can be created from arbitrary source formats (plain @LaTeX{}
 files, @dots{}).  The first target in the @file{Makefile} should take
-care of both creation of PDF files and cleaning up afterwards, i.e.,
-delete all files that shall not appear in the final package archive.
-Note that the @code{make} step is executed independently from the
-presence of any files in Sweave format, and that if it runs @R{} it
-needs to be careful to respect the environment value of @env{R_LIBS}.
+care of both creation of PDF files and cleaning up afterwards (including
+after @code{Sweave}), i.e., delete all files that shall not appear in
+the final package archive.  Note that the @code{make} step is executed
+independently from the presence of any files in Sweave format, and that
+if it runs @R{} it needs to be careful to respect the environment value
+of @env{R_LIBS}.
 
 It is no longer necessary to provide a @file{00Index.dcf} file in the
 @file{inst/doc} directory---the corresponding information is generated
