--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1902,7 +1902,9 @@ cleaning up afterwards (including after @code{Sweave}), i.e., delete all
 files that shall not appear in the final package archive.  Note that the
 @code{make} step is executed independently from the presence of any
 files in Sweave format, and that if it runs @R{} it needs to be careful
-to respect the environment value of @env{R_LIBS}.
+to respect the environment value of @env{R_LIBS} and @env{R_HOME}.
+Finally, if there is a @file{Makefile} and it has a @samp{clean:}
+target, @command{make clean} is run.
 
 It is no longer necessary to provide a @file{00Index.dcf} file in the
 @file{inst/doc} directory---the corresponding information is generated
