ignore inst/doc/makefile (l/case)
git-svn-id: https://svn.r-project.org/R/trunk@54616 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1890,21 +1890,20 @@ machine.@footnote{provided the conditions of the package's licence are
 met: many would see these as incompatible with an Open Source licence.}
 
 By default @code{R CMD build} will run @code{Sweave} on all files in
-Sweave format.  If no @file{Makefile}@footnote{for historical reasons
-file @file{makefile} is currently also accepted, with a warning.} is
-found in directory @file{inst/doc}, then @code{tools::texi2dvi(pdf =
-TRUE)} is run on all vignettes.  Whenever a @file{Makefile} is found,
-then @code{R CMD build} will try to run @command{make} after the
-@code{Sweave} runs, so PDF manuals can be created from arbitrary source
-formats (plain @LaTeX{} files, @dots{}).  The first target in the
-@file{Makefile} should take care of both creation of PDF files and
-cleaning up afterwards (including after @code{Sweave}), i.e., delete all
-files that shall not appear in the final package archive.  Note that the
-@code{make} step is executed independently from the presence of any
-files in Sweave format, and that if it runs @R{} it needs to be careful
-to respect the environment value of @env{R_LIBS} and @env{R_HOME}.
-Finally, if there is a @file{Makefile} and it has a @samp{clean:}
-target, @command{make clean} is run.
+Sweave format.  If no @file{Makefile} is found in directory
+@file{inst/doc}, then @code{tools::texi2dvi(pdf = TRUE)} is run on all
+vignettes.  Whenever a @file{Makefile} is found, then @code{R CMD build}
+will try to run @command{make} after the @code{Sweave} runs, so PDF
+manuals can be created from arbitrary source formats (plain @LaTeX{}
+files, @dots{}).  The first target in the @file{Makefile} should take
+care of both creation of PDF files and cleaning up afterwards (including
+after @code{Sweave}), i.e., delete all files that shall not appear in
+the final package archive.  Note that the @code{make} step is executed
+independently from the presence of any files in Sweave format, and that
+if it runs @R{} it needs to be careful to respect the environment value
+of @env{R_LIBS} and @env{R_HOME}.  Finally, if there is a
+@file{Makefile} and it has a @samp{clean:} target, @command{make clean}
+is run.
 
 It is no longer necessary to provide a @file{00Index.dcf} file in the
 @file{inst/doc} directory---the corresponding information is generated
