--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -2655,7 +2655,7 @@ process, e.g.@: by a @code{system} call.
 Windows has another couple of peculiarities.  Whereas a POSIX file
 system has a single root directory (and other physical file systems are
 mounted onto logical directories under that root), Windows has separate
-roots for each physical or logical file system (`volumne'), organized
+roots for each physical or logical file system (`volume'), organized
 under @emph{drives} (with file paths starting @code{D:} for an ASCII
 letter, case-insensitively) and @emph{network shares} (with paths like
 @code{\netname\topdir\myfiles\a file}.  There is a current drive, and
